--- a/code/chap12-Copy1.ipynb
+++ b/code/chap12-Copy1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,16 +151,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.333 0.25 0.46716293183605073\n",
+      "           S         I         R\n",
+      "0   0.988889  0.011111  0.000000\n",
+      "1   0.985230  0.011992  0.002778\n",
+      "2   0.981296  0.012929  0.005776\n",
+      "3   0.977071  0.013921  0.009008\n",
+      "4   0.972541  0.014970  0.012488\n",
+      "5   0.967693  0.016076  0.016231\n",
+      "6   0.962513  0.017237  0.020250\n",
+      "7   0.956988  0.018453  0.024559\n",
+      "8   0.951108  0.019720  0.029172\n",
+      "9   0.944862  0.021036  0.034102\n",
+      "10  0.938243  0.022396  0.039361\n",
+      "11  0.931246  0.023794  0.044960\n",
+      "12  0.923867  0.025224  0.050909\n",
+      "13  0.916107  0.026678  0.057215\n",
+      "14  0.907969  0.028147  0.063884\n",
+      "15  0.899458  0.029621  0.070921\n",
+      "16  0.890586  0.031087  0.078326\n",
+      "17  0.881367  0.032535  0.086098\n",
+      "18  0.871818  0.033950  0.094232\n",
+      "19  0.861962  0.035319  0.102719\n",
+      "20  0.851824  0.036627  0.111549\n",
+      "21  0.841435  0.037860  0.120706\n",
+      "22  0.830827  0.039003  0.130171\n",
+      "23  0.820036  0.040043  0.139921\n",
+      "24  0.809101  0.040967  0.149932\n",
+      "25  0.798063  0.041763  0.160174\n",
+      "26  0.786965  0.042421  0.170614\n",
+      "27  0.775848  0.042932  0.181220\n",
+      "28  0.764756  0.043291  0.191953\n",
+      "29  0.753731  0.043493  0.202775\n",
+      "..       ...       ...       ...\n",
+      "69  0.535390  0.006407  0.458202\n",
+      "70  0.534248  0.005948  0.459804\n",
+      "71  0.533190  0.005519  0.461291\n",
+      "72  0.532210  0.005119  0.462671\n",
+      "73  0.531303  0.004747  0.463951\n",
+      "74  0.530463  0.004400  0.465137\n",
+      "75  0.529686  0.004077  0.466237\n",
+      "76  0.528967  0.003777  0.467256\n",
+      "77  0.528301  0.003498  0.468201\n",
+      "78  0.527686  0.003239  0.469075\n",
+      "79  0.527117  0.002998  0.469885\n",
+      "80  0.526590  0.002775  0.470635\n",
+      "81  0.526104  0.002568  0.471328\n",
+      "82  0.525654  0.002376  0.471970\n",
+      "83  0.525238  0.002198  0.472564\n",
+      "84  0.524854  0.002033  0.473114\n",
+      "85  0.524498  0.001880  0.473622\n",
+      "86  0.524170  0.001738  0.474092\n",
+      "87  0.523867  0.001607  0.474526\n",
+      "88  0.523586  0.001486  0.474928\n",
+      "89  0.523327  0.001373  0.475299\n",
+      "90  0.523088  0.001269  0.475643\n",
+      "91  0.522867  0.001173  0.475960\n",
+      "92  0.522663  0.001084  0.476253\n",
+      "93  0.522474  0.001002  0.476524\n",
+      "94  0.522300  0.000926  0.476775\n",
+      "95  0.522139  0.000855  0.477006\n",
+      "96  0.521990  0.000790  0.477220\n",
+      "97  0.521853  0.000730  0.477417\n",
+      "98  0.521726  0.000674  0.477600\n",
+      "\n",
+      "[99 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "beta = 0.333\n",
     "gamma = 0.25\n",
     "system = make_system(beta, gamma)\n",
     "\n",
     "results = run_simulation(system, update_func)\n",
-    "print(beta, gamma, calc_total_infected(results))"
+    "print(beta, gamma, calc_total_infected(results))\n",
+    "print(results)"
    ]
   },
   {
@@ -190,29 +263,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.353620268759236 %\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "def fraction_at_peak(tSeries):\n",
+    "    I = tSeries.I\n",
+    "    max_val = I.max()\n",
+    "    return (max_val * 100)\n",
+    "    \n",
+    "\n",
+    "print(fraction_at_peak(results),'%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 days\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "def infection_peak_day(tSeries):\n",
+    "    day = tSeries.I.idxmax()\n",
+    "    return day\n",
+    "\n",
+    "print(infection_peak_day(results), 'days')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06741943156034474 %\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "def sick_at_end(tSeries):\n",
+    "    num_students = get_last_value(tSeries.I)\n",
+    "    return num_students * 100\n",
+    "\n",
+    "print(sick_at_end(results), '%')"
    ]
   },
   {
